# wazeasy

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: gh-pages.yml
docs/: _config.yml  _toc.yml  conf.py
src/wazeasy/: plots.py  utils.py
